--- a/app/src/main/res/layout/activity_my_video.xml
+++ b/app/src/main/res/layout/activity_my_video.xml
@@ -1,47 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
     tools:context=".activity.MySessionsActivity">
 
-    <include
-        android:id="@+id/appBar"
-        layout="@layout/toolbar"
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"
+        android:background="@drawable/bg"
+        tools:context=".activity.MySessionsActivity">
 
-    <android.support.v7.widget.SearchView
-        android:id="@+id/search_video"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:defaultQueryHint="@string/search"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appBar" >
+        <include
+            android:id="@+id/appBar"
+            layout="@layout/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    </android.support.v7.widget.SearchView>
+        <android.support.v7.widget.SearchView
+            android:id="@+id/search_video"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:defaultQueryHint="@string/search"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/appBar">
 
-    <GridView
-        android:id="@+id/grid_videos"
+        </android.support.v7.widget.SearchView>
+
+        <GridView
+            android:id="@+id/grid_videos"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:clipToPadding="false"
+            android:columnWidth="150dp"
+            android:gravity="center"
+            android:horizontalSpacing="16dp"
+            android:numColumns="auto_fit"
+            android:paddingBottom="16dp"
+            android:verticalSpacing="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/search_video"
+            tools:listitem="@layout/item_video" />
+
+    </android.support.constraint.ConstraintLayout>
+
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:clipToPadding="false"
-        android:columnWidth="150dp"
-        android:gravity="center"
-        android:horizontalSpacing="16dp"
-        android:numColumns="auto_fit"
-        android:paddingBottom="16dp"
-        android:verticalSpacing="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search_video"
-        tools:listitem="@layout/item_video" >
-    </GridView>
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@color/colorCharcoal"
+        android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="70dp"
+            android:layout_gravity="center"
+            android:background="@drawable/vyfe_blanc" />
+
+        <android.support.design.widget.NavigationView
+            android:id="@+id/nav_view"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@color/colorCharcoal"
+            android:fitsSystemWindows="true"
+            app:itemIconTint="@color/colorWhiteTwo"
+            app:itemTextColor="@color/colorWhiteTwo"
+            app:menu="@menu/menu_main" />
+    </LinearLayout>
+</android.support.v4.widget.DrawerLayout>
