--- a/app/src/main/res/layout/activity_play_video.xml
+++ b/app/src/main/res/layout/activity_play_video.xml
@@ -1,108 +1,140 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
-    android:orientation="vertical"
     tools:context="fr.vyfe.activity.PlayVideoActivity">
 
-    <include
-        android:id="@+id/appBar"
-        layout="@layout/toolbar" />
-
-
-    <LinearLayout
-        android:id="@+id/linear_layoutVideo"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.65"
-        android:weightSum="10">
-
-
-        <android.support.constraint.ConstraintLayout
-            android:id="@+id/constraint_video_player"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="6"
-            android:visibility="visible" />
-
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/re_tags_selected"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="4"
-            android:paddingEnd="8dp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
+        android:background="@drawable/bg"
         android:orientation="vertical"
-        android:layout_weight="0.45"
-        android:id="@+id/ll_info_progress">
+        tools:context="fr.vyfe.activity.PlayVideoActivity">
+
+        <include
+            android:id="@+id/appBar"
+            layout="@layout/toolbar" />
+
+
         <LinearLayout
+            android:id="@+id/linear_layoutVideo"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:id="@+id/ll_progress_video">
+            android:layout_height="0dp"
+            android:layout_weight="0.65"
+            android:weightSum="10">
 
-            <ImageView
-                android:id="@+id/iv_arrow_size"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_gravity="right"
-                android:layout_marginEnd="20dp"
-                android:background="@drawable/caret_arrow_up" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+            <android.support.constraint.ConstraintLayout
+                android:id="@+id/constraint_video_player"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="6"
+                android:visibility="visible" />
 
-                <TextView
-                    android:id="@+id/tv_position_seek"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="start"
-                    android:layout_marginStart="10dp"
-                    android:layout_weight="1"
-                    android:textColor="@color/colorWhiteTwo" />
 
-                <TextView
-                    android:id="@+id/tv_end_time"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="end"
-                    android:layout_marginEnd="10dp"
-                    android:layout_weight="1"
-                    android:gravity="end"
-                    android:textColor="@color/colorWhiteTwo" />
-            </LinearLayout>
-
-            <SeekBar
-                android:id="@+id/timer_seekbar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="18"
-               />
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/re_tags_selected"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="4"
+                android:paddingEnd="8dp" />
 
         </LinearLayout>
 
-        <ScrollView
-            android:id="@+id/scrollTimeline"
+        <LinearLayout
+            android:id="@+id/ll_info_progress"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
+            android:layout_height="0dp"
+            android:layout_weight="0.45"
+            android:orientation="vertical">
 
-        </ScrollView>
+            <LinearLayout
+                android:id="@+id/ll_progress_video"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/iv_arrow_size"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_gravity="right"
+                    android:layout_marginEnd="20dp"
+                    android:background="@drawable/caret_arrow_up" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tv_position_seek"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="start"
+                        android:layout_marginStart="10dp"
+                        android:layout_weight="1"
+                        android:textColor="@color/colorWhiteTwo" />
+
+                    <TextView
+                        android:id="@+id/tv_end_time"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="end"
+                        android:layout_marginEnd="10dp"
+                        android:layout_weight="1"
+                        android:gravity="end"
+                        android:textColor="@color/colorWhiteTwo" />
+                </LinearLayout>
+
+                <SeekBar
+                    android:id="@+id/timer_seekbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="18" />
+
+            </LinearLayout>
+
+            <ScrollView
+                android:id="@+id/scrollTimeline"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            </ScrollView>
+        </LinearLayout>
+
     </LinearLayout>
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@color/colorCharcoal"
+        android:orientation="vertical">
 
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="70dp"
+            android:layout_gravity="center"
+            android:background="@drawable/vyfe_blanc" />
 
+        <android.support.design.widget.NavigationView
+            android:id="@+id/nav_view"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@color/colorCharcoal"
+            android:fitsSystemWindows="true"
+            app:itemIconTint="@color/colorWhiteTwo"
+            app:itemTextColor="@color/colorWhiteTwo"
+            app:menu="@menu/menu_main" />
+    </LinearLayout>
+
+</android.support.v4.widget.DrawerLayout>
 
 
 
