--- a/app/src/main/res/layout/activity_prepare_session.xml
+++ b/app/src/main/res/layout/activity_prepare_session.xml
@@ -1,33 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
-    android:orientation="vertical"
     tools:context="fr.vyfe.activity.CreateGridActivity">
 
-    <include
-        android:id="@+id/appBar"
-        layout="@layout/toolbar"
-        />
-    <FrameLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/create_grid_fragment_container"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-    </FrameLayout>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/bg"
+        android:orientation="vertical"
+        tools:context="fr.vyfe.activity.CreateGridActivity">
 
-    <FrameLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/create_template_fragment_container"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-    </FrameLayout>
+        <include
+            android:id="@+id/appBar"
+            layout="@layout/toolbar" />
+
+        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/create_grid_fragment_container"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"></FrameLayout>
+
+        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/create_template_fragment_container"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
 
 
-</LinearLayout>
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@color/colorCharcoal"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="70dp"
+            android:layout_gravity="center"
+            android:background="@drawable/vyfe_blanc" />
+
+        <android.support.design.widget.NavigationView
+            android:id="@+id/nav_view"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@color/colorCharcoal"
+            android:fitsSystemWindows="true"
+            app:itemIconTint="@color/colorWhiteTwo"
+            app:itemTextColor="@color/colorWhiteTwo"
+            app:menu="@menu/menu_main" />
+    </LinearLayout>
+</android.support.v4.widget.DrawerLayout>
 
 
 
