--- a/app/src/main/res/layout/activity_edit_session.xml
+++ b/app/src/main/res/layout/activity_edit_session.xml
@@ -23,7 +23,7 @@
         <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/edit_session_fragment_container"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"></FrameLayout>
+            android:layout_height="fill_parent"/>
 
     </LinearLayout>
 
