--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:orientation="vertical"
-    android:background="@drawable/style_radius">
+    android:background="@drawable/color_gradient_grey">
 
     <LinearLayout
         android:id="@+id/title_video_container"
