--- a/app/src/main/res/drawable/color_gradient_grey.xml
+++ b/app/src/main/res/drawable/color_gradient_grey.xml
@@ -3,8 +3,8 @@
     <corners
         android:radius="10dp" />
     <gradient
-        android:endColor="@color/colorGrey"
-        android:startColor="@color/colorGreyDrak"
+        android:endColor="@color/colorGreyDrak"
+        android:startColor="@color/colorGrey"
         android:angle="180"/>
     <stroke android:width="1dp" android:color="@color/colorCharcoal" />
 </shape>
