--- a/app/src/main/res/layout/fragment_edit_session.xml
+++ b/app/src/main/res/layout/fragment_edit_session.xml
@@ -140,7 +140,7 @@
                     app:fontFamily="@font/roboto_bold"
                      />
                     <TextView
-                        android:id="@+id/delete"
+                        android:id="@+id/tv_delete"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Supprimer"
