--- a/app/src/main/res/layout/activity_selected_video.xml
+++ b/app/src/main/res/layout/activity_selected_video.xml
@@ -244,27 +244,10 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <include
+        android:id="@+id/burger"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="@color/colorCharcoal"
-        android:orientation="vertical">
-
-        <ImageView
-            android:layout_width="150dp"
-            android:layout_height="70dp"
-            android:layout_gravity="center"
-            android:background="@drawable/vyfe_blanc" />
-
-        <android.support.design.widget.NavigationView
-            android:id="@+id/nav_view"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:background="@color/colorCharcoal"
-            android:fitsSystemWindows="true"
-            app:itemIconTint="@color/colorWhiteTwo"
-            app:itemTextColor="@color/colorWhiteTwo"
-            app:menu="@menu/menu_main" />
-    </LinearLayout>
+        layout="@layout/burger_menu" />
 </android.support.v4.widget.DrawerLayout>
