--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -65,7 +65,7 @@
             android:layout_marginEnd="35dp"
             android:layout_marginBottom="8dp"
             android:alpha="0.8"
-            android:background="@drawable/smarth"
+            android:background="@drawable/icons8_lecture_de_youtube_100"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
