--- a/app/src/main/res/xml/remote_config_defaults.xml
+++ b/app/src/main/res/xml/remote_config_defaults.xml
@@ -3,15 +3,7 @@
 <!-- START xml_defaults -->
 <defaultsMap>
     <entry>
-        <key>loading_phrase</key>
-        <value>Fetching config…</value>
-    </entry>
-    <entry>
-        <key>welcome_message_caps</key>
+        <key>force_upload</key>
         <value>false</value>
-    </entry>
-    <entry>
-        <key>welcome_message</key>
-        <value>Welcome to my awesome app!</value>
     </entry>
 </defaultsMap>
