--- a/app/src/main/res/xml/remote_config_defaults.xml
+++ b/app/src/main/res/xml/remote_config_defaults.xml
@@ -4,6 +4,6 @@
 <defaultsMap>
     <entry>
         <key>force_upload</key>
-        <value>false</value>
+        <value>ici</value>
     </entry>
 </defaultsMap>
