--- a/app/src/main/res/layout/create_tags_fragment.xml
+++ b/app/src/main/res/layout/create_tags_fragment.xml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="15dp"
-    tools:context="fr.vyfe.fragment.CreateTemplatesFragment">
 
-    <LinearLayout
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginTop="8dp"
         android:orientation="vertical"
+        tools:context="fr.vyfe.fragment.CreateTemplatesFragment"
         >
 
         <LinearLayout
@@ -87,7 +84,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_weight="0.2"
-                android:background="@drawable/icons8_coche_96"
+                android:background="@drawable/add"
                 android:textColor="@color/colorWhiteTwo"
                 tools:layout_editor_absoluteX="449dp"
                 tools:layout_editor_absoluteY="50dp" />
@@ -99,7 +96,8 @@
             android:layout_marginTop="20dp">
             <TextView
                 android:id="@+id/grid"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="0.4"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
                 android:paddingRight="20dp"
@@ -113,14 +111,14 @@
 
                 android:id="@+id/recycler_view"
                 android:minWidth="300dp"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="0.4"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="50dp"
                 android:layout_marginLeft="50dp"
                 android:layout_marginRight="50dp"
                 android:layout_marginStart="50dp"
                 android:layout_marginTop="10dp"
-                android:scrollbars="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
@@ -130,7 +128,7 @@
                 style="@style/Widget.AppCompat.Button.Small"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:background="@drawable/savedata"
+                android:background="@drawable/icons8_coche_96"
                 android:fontFamily="@font/roboto_bold"
                 android:padding="5dp"
                 android:visibility="gone"
@@ -140,9 +138,10 @@
                 android:textSize="16sp" />
             <TextView
                 android:id="@+id/tv_save"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="0.2"
                 android:layout_height="wrap_content"
-                android:text="Sauvegarder"
+                android:text="Valider"
                 android:visibility="gone"
                 android:textColor="@color/colorWhiteTwo"
                 android:textSize="17sp"
@@ -154,4 +153,3 @@
 
     </LinearLayout>
 
-</ScrollView>
