--- a/app/src/main/res/layout/fragment_edit_session.xml
+++ b/app/src/main/res/layout/fragment_edit_session.xml
@@ -8,10 +8,9 @@
     tools:context="fr.vyfe.fragment.EditSessionFragment">
 
     <ScrollView
-        android:layout_marginTop="50dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="20dp">
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -117,7 +116,7 @@
                         android:id="@+id/tv_save"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Sauvegarder"
+                        android:text="Valider"
                         android:textColor="@color/colorWhiteTwo"
                         android:textSize="17sp"
                         app:fontFamily="@font/roboto"
