--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -21,4 +21,8 @@
         android:id="@+id/movie"
         android:icon="@drawable/video"
         android:title="@string/movies" />
+
+    <item
+        android:id="@+id/version"
+        android:title="@string/version" />
 </menu>
