add short actions and delete sessions

--- a/app/src/main/res/layout/activity_selected_video.xml
+++ b/app/src/main/res/layout/activity_selected_video.xml
@@ -143,7 +143,7 @@
                             app:fontFamily="@font/roboto_bold" />
 
                         <Button
-                            android:id="@+id/btn_edit"
+                            android:id="@+id/img_button_edit"
                             style="?android:attr/buttonBarButtonStyle"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
