--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -4,17 +4,17 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:orientation="vertical"
-    android:background="@drawable/color_gradient_grey">
+    android:layout_marginLeft="8dp"
+    android:background="@drawable/color_gradient_grey"
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/title_video_container"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:layout_marginStart="8dp"
-        android:orientation="horizontal"
-      >
+        android:layout_marginTop="8dp"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/play"
@@ -26,11 +26,17 @@
             android:id="@+id/title_video"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
             android:layout_gravity="center_vertical"
+            android:layout_marginLeft="8dp"
             android:text="@string/title_video"
             android:textColor="@color/colorWhiteTwo"
             app:fontFamily="@font/roboto_bold" />
+
+        <CheckBox
+            android:id="@+id/checkbox_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="invisible" />
 
     </LinearLayout>
 
@@ -77,8 +83,8 @@
             android:layout_height="13dp"
             android:layout_marginEnd="0dp"
             android:layout_marginBottom="0dp"
-            android:background="@drawable/nodispo"
             android:alpha="0.8"
+            android:background="@drawable/nodispo"
             app:layout_constraintBottom_toBottomOf="@+id/iv_device"
             app:layout_constraintEnd_toEndOf="@+id/iv_device" />
 
@@ -88,40 +94,77 @@
             android:layout_height="25dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:background="@drawable/laptop"
             android:alpha="0.8"
+            android:background="@drawable/laptop"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
         <ImageView
             android:id="@+id/iv_available_plateforme"
             android:layout_width="13dp"
             android:layout_height="13dp"
             android:layout_marginEnd="0dp"
             android:layout_marginBottom="0dp"
-            android:background="@drawable/dispo"
             android:alpha="0.8"
+            android:background="@drawable/dispo"
             app:layout_constraintBottom_toBottomOf="@+id/iv_plateforme"
             app:layout_constraintEnd_toEndOf="@+id/iv_plateforme" />
 
     </android.support.constraint.ConstraintLayout>
+
     <TextView
-        android:layout_marginStart="8dp"
         android:id="@+id/video_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/timestamp"
         android:textColor="@color/colorWhiteTwo"
-        app:fontFamily="@font/roboto"
-        android:layout_marginBottom="8dp"/>
+        app:fontFamily="@font/roboto" />
 
     <TextView
-        android:layout_marginStart="8dp"
         android:id="@+id/video_duration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/colorWhiteTwo"
-        app:fontFamily="@font/roboto"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="8dp"
         android:text="Duree"
-        android:layout_marginBottom="8dp"/>
+        android:textColor="@color/colorWhiteTwo"
+        app:fontFamily="@font/roboto" />
+
+    <LinearLayout
+        android:id="@+id/container_action"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/color_gradient_grey_item_action"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal"
+        android:padding="5dp">
+
+        <ImageButton
+            android:id="@+id/img_button_play"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/play_white" />
+
+        <ImageButton
+            android:id="@+id/img_button_edit"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/edit" />
+
+        <ImageButton
+            android:id="@+id/img_btn_delete"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/delete" />
+
+    </LinearLayout>
+
 </LinearLayout>
+
