--- a/app/src/main/res/layout/fragment_create_grid.xml
+++ b/app/src/main/res/layout/fragment_create_grid.xml
@@ -22,7 +22,7 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
+                android:orientation="horizontal"
                 android:layout_gravity="center">
 
 
@@ -36,6 +36,9 @@
                     android:textColor="@android:color/background_light"
                     android:textSize="20sp"
                     app:fontFamily="@font/roboto_bold" />
+                <include
+                    android:id="@+id/info"
+                    layout="@layout/_mock_info" />
 
             </LinearLayout>
             <LinearLayout
