--- a/app/src/main/res/layout/fragment_create_session.xml
+++ b/app/src/main/res/layout/fragment_create_session.xml
@@ -25,28 +25,41 @@
                     android:id="@+id/appBar"
                     layout="@layout/toolbar" />
 
-                <TextView
-                    android:id="@+id/tv_information"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="40dp"
-                    android:layout_marginStart="40dp"
-                    android:layout_marginTop="36dp"
-                    android:text="@string/info_session"
-                    android:textColor="@color/colorWhiteTwo"
-                    android:textSize="24sp"
-                    app:fontFamily="@font/roboto_bold"
+                    android:gravity="center_horizontal"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/appBar" />
+                    app:layout_constraintTop_toBottomOf="@+id/appBar">
+
+                    <TextView
+                        android:id="@+id/tv_information"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="40dp"
+                        android:layout_marginLeft="40dp"
+                        android:layout_marginTop="36dp"
+                        android:text="@string/info_session"
+                        android:textColor="@color/colorWhiteTwo"
+                        android:textSize="24sp"
+                        app:fontFamily="@font/roboto_bold"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/appBar" />
+
+                    <include
+                        android:id="@+id/info"
+                        layout="@layout/_mock_info" />
+
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="40dp"
-                    android:layout_marginRight="40dp"
-                    android:layout_marginEnd="40dp"
                     android:layout_marginStart="40dp"
+                    android:layout_marginLeft="40dp"
                     android:layout_marginTop="20dp"
+                    android:layout_marginEnd="40dp"
+                    android:layout_marginRight="40dp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -64,8 +77,8 @@
                         android:id="@+id/et_video_title2"
                         android:layout_width="wrap_content"
                         android:layout_height="40dp"
-                        android:layout_marginLeft="40dp"
                         android:layout_marginStart="40dp"
+                        android:layout_marginLeft="40dp"
                         android:background="@drawable/style_input"
                         android:ems="10"
                         android:hint="@string/ex_title_session"
@@ -82,33 +95,32 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="40dp"
-                    android:layout_marginLeft="40dp"
-                    android:layout_marginRight="40dp"
                     android:layout_marginStart="40dp"
+                    android:layout_marginLeft="40dp"
                     android:layout_marginTop="10dp"
+                    android:layout_marginEnd="40dp"
+                    android:layout_marginRight="40dp"
                     android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/tv_choose_grid"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.3"
                         android:layout_marginTop="30dp"
+                        android:layout_weight="0.3"
                         android:text="@string/grid_import"
                         android:textColor="@color/colorWhiteTwo"
                         android:textSize="20sp"
                         app:fontFamily="@font/roboto"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/tv_information"
-                        />
+                        app:layout_constraintTop_toBottomOf="@+id/tv_information" />
 
                     <Spinner
                         android:id="@+id/spinner_session_infos"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="32dp"
                         android:layout_marginStart="32dp"
+                        android:layout_marginLeft="32dp"
                         android:layout_marginTop="20dp"
                         android:layout_weight="0.7"
                         android:background="@drawable/style_input"
@@ -120,35 +132,35 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_marginBottom="20dp"
-                        android:layout_marginLeft="32dp"
                         android:layout_marginStart="32dp"
+                        android:layout_marginLeft="32dp"
                         android:layout_marginTop="20dp"
+                        android:layout_marginBottom="20dp"
+                        android:layout_weight="0.1"
                         android:alpha="0.6"
                         android:background="@drawable/style_button_white"
                         android:padding="5dp"
                         android:text="@string/create_grid_short"
                         android:textColor="@color/colorBlack"
-                        android:textSize="16sp"
-                        android:layout_weight="0.1"/>
+                        android:textSize="16sp" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="20dp"
                     android:orientation="horizontal"
-                    android:paddingTop="10dp"
-                    android:layout_marginBottom="20dp">
+                    android:paddingTop="10dp">
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/recycler_view_import"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="32dp"
-                        android:layout_marginLeft="32dp"
-                        android:layout_marginRight="32dp"
                         android:layout_marginStart="32dp"
+                        android:layout_marginLeft="32dp"
                         android:layout_marginTop="16dp"
+                        android:layout_marginEnd="32dp"
+                        android:layout_marginRight="32dp"
                         android:layout_weight="0.8"
                         android:scrollbars="vertical"
                         android:visibility="visible"
@@ -161,10 +173,10 @@
                         android:id="@+id/button_go"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="16dp"
+                        android:layout_marginTop="16dp"
                         android:layout_marginEnd="16dp"
                         android:layout_marginRight="16dp"
-                        android:layout_marginTop="16dp"
+                        android:layout_marginBottom="16dp"
                         android:background="@drawable/style_button"
                         android:padding="5dp"
                         android:text="@string/go"
@@ -174,11 +186,7 @@
                 </LinearLayout>
 
 
-
-
             </LinearLayout>
-
-
 
 
         </android.support.constraint.ConstraintLayout>
@@ -204,8 +212,8 @@
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -223,11 +231,11 @@
                 android:id="@+id/tv_share"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
                 android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
                 android:text="@string/share_url"
                 android:textColor="@color/colorWhiteTwo"
                 android:textSize="18sp"
@@ -256,11 +264,11 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
                 android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
                 android:layout_marginTop="32dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_url">
